2007-03-24  Jim Evins  <evins@snaught.com>

	* src/object-editor-image-page.c:
	(gl_object_editor_prepare_image_page),
	(gl_object_editor_set_image), (img_selection_changed_cb):
		Workaround for GtkFileChooserButton bug # 327243.  This the root
		cause for gLabels bug # 1192884.  I have actually observed 3 delayed
		"selection-changed" signals -- the first 2 return NULL -- this is
		what caused the image to reset to the default followed by setting
		it back to the original image, trying to fit it into a new bounding
		box.  This sequence of events is much more evident with the new
		cairo rendering.

2007-03-23  Jim Evins  <evins@snaught.com>

	Merged all changes from experimental cairo branch to trunk.
	Trunk no longer depends on libgnomecanvas or libgnomeprint[ui].

2007-03-23  Jim Evins  <evins@snaught.com>

	* src/label-object.h:
	* src/label-object.c: (gl_label_object_class_init),
	(gl_label_object_get_raw_size), (gl_label_object_get_size):
		Created "get_raw_size" method.
	* src/label-barcode.c: (get_size):
	* src/xml-label.c: (xml_create_object_text),
	(xml_create_object_barcode):
		Use new "get_raw_size" method on label-objects when apropos.
	* src/label-text.h:
	* src/label-text.c: (get_size), (draw_object), (draw_shadow),
	(auto_shrink_font_size):
		Added "auto shrink" functionality back.

2007-03-19  Jim Evins  <evins@snaught.com>

	* src/label-text.c: (draw_object), (draw_shadow):
		Don't use negative scales in workaround from previous commit.
	

2007-03-18  Jim Evins  <evins@snaught.com>

	* src/xml-label.c:
		Forgot to remove include of xml-lable-191 in previous commit.
	* src/label-text.c: (get_size), (draw_object), (draw_shadow):
		Workaround for pango Bug #341481.  Render text at device scale,
		and scale font size accordingly.  Also, don't do any hinting.

2007-03-18  Jim Evins  <evins@snaught.com>

	* src/cairo-ellipse-path.c:
	* src/cairo-ellipse-path.h:
		Forgot to add these new files during last mass commit.
