@@ -184,7 +184,8 @@ void
 gl_ui_cmd_file_print (GtkAction *action,
                       glWindow  *window)
 {
-        glPrintOp *op;
+        glPrintOp               *op;
+        GtkPrintOperationResult  result;
 
         gl_debug (DEBUG_COMMANDS, "START");
 
@@ -193,10 +194,23 @@ gl_ui_cmd_file_print (GtkAction *action,
 
         op = gl_print_op_new (GL_VIEW(window->view)->label);
 
-        gtk_print_operation_run (GTK_PRINT_OPERATION (op),
-                                 GTK_PRINT_OPERATION_ACTION_PRINT_DIALOG,
-                                 GTK_WINDOW (window),
-                                 NULL);
+        if (window->print_settings)
+        {
+                gl_print_op_set_settings (op, window->print_settings);
+        }
+
+        result = gtk_print_operation_run (GTK_PRINT_OPERATION (op),
+                                          GTK_PRINT_OPERATION_ACTION_PRINT_DIALOG,
+                                          GTK_WINDOW (window),
+                                          NULL);
+
+        if ( result == GTK_PRINT_OPERATION_RESULT_APPLY )
+        {
+                gl_print_op_free_settings (window->print_settings);
+                window->print_settings = gl_print_op_get_settings (op);
+
+                g_object_unref (op);
+        }
 
         gl_debug (DEBUG_COMMANDS, "END");
 }
